<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitalityActivity">

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_weight"
        android:text="@string/tv_weight_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_weight"
        app:layout_constraintStart_toStartOf="@+id/et_weight" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_steps"
        android:text="@string/tv_steps_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_steps"
        app:layout_constraintStart_toStartOf="@+id/et_steps" />

    <EditText
        android:id="@+id/et_steps"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_save_vitality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_save_vitality_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_steps" />
</androidx.constraintlayout.widget.ConstraintLayout>